Changes - adding phone in documentation
